[tool.poetry]
name = "lgh"
version = "0.1.0"
description = ""
authors = ["Luka Minđek <luka@sevensigmagroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
